fix extra padding in SwitchboardNavigationButton

--- a/gtk-3.0/apps.css
+++ b/gtk-3.0/apps.css
@@ -177,14 +177,14 @@ SwitchboardCategoryView .category-label {
 
 SwitchboardNavigationButton.button {
     border-image: url("assets/button-back.svg") 2 3 3 11 / 2px 3px 3px 11px stretch;
-    border-width: 2px 3px 3px 11px;
+    border-width: 1px 3px 3px 11px;
     border-radius: 0 2.5px 2.5px 0;
     box-shadow: none;
 }
 
 SwitchboardNavigationButton.button:backdrop {
     border-image: url("assets/button-back-backdrop.svg") 2 3 3 11 / 2px 3px 3px 11px stretch;
-    border-width: 2px 3px 3px 11px;
+    border-width: 1px 3px 3px 11px;
     border-radius: 0 2.5px 2.5px 0;
     box-shadow: none;
 }
@@ -193,7 +193,7 @@ SwitchboardNavigationButton.button:active,
 SwitchboardNavigationButton.button:hover:active,
 SwitchboardNavigationButton.button:focus:active {
     border-image: url("assets/button-back-active.svg") 2 3 3 11 / 2px 3px 3px 11px stretch;
-    border-width: 2px 3px 3px 11px;
+    border-width: 1px 3px 3px 11px;
     border-radius: 0 2.5px 2.5px 0;
     box-shadow: none;
 }
